# fastfood_service

./: .env.dev  .gitignore  docker-compose.yml  start.sh
backend/: docker-compose.yml
backend/app/: Dockerfile.app  db.sqlite3  pyproject.toml  start.py
backend/app/core/: settings.py  urls.py
backend/app/product/: admin.py  apps.py  routers.py
backend/app/product/api/: __init__.py  product.py
backend/app/product/migrations/: 0001_initial.py  0002_productimage.py  0003_alter_category_options_and_more.py
backend/app/product/models/: __init__.py  additional_ingredients.py  category.py  component_product.py  nutritional_value.py  product.py  product_image.py
backend/app/product/serializers/: __init__.py  product.py  product_image.py
nginx/: default.conf
